--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -6,9 +6,9 @@
 
   <!-- 🐨 add React and ReactDOM on the page.
        💰 Here are script tags that'll do the job:
+      -->
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
-  -->
 
   <script type="module">
     const rootElement = document.getElementById('root')
@@ -16,11 +16,24 @@
     // You're going to re-implement this code using React!
     // 💣 So go ahead and delete this implementation (or comment it out for now)
     // These three lines are similar to React.createElement
-    const element = document.createElement('div')
-    element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
-    element.className = 'container' // 💰 in React, this is also called the "className" prop
+    // const element = document.createElement('div')
+    // element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
+    // element.className = 'container' // 💰 in React, this is also called the "className" prop
     // This is similar to ReactDOM.render
-    rootElement.append(element)
+    // rootElement.append(element)
+    // React.createElement(type, props)
+    // const firstChildType = 'span'
+    // const firstChildProps = {children: 'Hello '}
+    // const firstChildElement = React.createElement(
+    //   firstChildType,
+    //   firstChildProps,
+    // )
+    // const secondChildType = 'span'
+    // const secondChildProps = {children: 'World'}
+    // const secondChildElement = React.createElement(
+    //   secondChildType,
+    //   secondChildProps,
+    // )
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
